syntax = "proto3";
package io.token.proto.common.member;

option java_outer_classname = "MemberProtos";

import "address.proto";
import "security.proto";


// Adds member key to the directory.
message MemberAddKeyOperation {
  string public_key = 1;                               // Base64url encoded public key.
  io.token.proto.common.security.Key.Level level = 2;
  io.token.proto.common.security.Key.Algorithm algorithm = 3;
}

// Removes member key from the directory.
message MemberRemoveKeyOperation {
  string key_id = 1;
}

// Adds/removes member username to/from the directory.
message MemberUsernameOperation {
  string username = 1;
}

// Updates member information in the directory. The directory is append only
// log of operations.
message MemberUpdate {
  string prev_hash = 1;
  string member_id = 2;
  oneof operation {
    MemberAddKeyOperation add_key = 3;
    MemberRemoveKeyOperation remove_key = 4;
    MemberUsernameOperation add_username = 5;
    MemberUsernameOperation remove_username = 6;
  }
}

// A member record that is computed by replaying all the member updates.
message Member {
  string id = 1;
  string last_hash = 2;
  repeated string usernames = 3;
  repeated io.token.proto.common.security.Key keys = 4;
}

// A member address record
message AddressRecord {
  string id = 1; // Address id
  string name = 2; // The display name of the address
  io.token.proto.common.address.Address address = 3; // Country specific JSON address
  io.token.proto.common.security.Signature address_signature = 4; // member signature of the address
}
